@@ -1,3 +1,14 @@
+2000-08-04  Hideyuki SHIRAI  <shirai@quickhack.net>
+
+	* emacs/mhc.el (mhc-mode-menu-spec): Add mhc-file-toggle-offline() and
+
+	* emacs/mhc-file.el (mhc-file-sync): Rescan this month after
+	mhc-file/sync().
+
+	* emacs/mhc-sync.el (mhc-sync/start-process): Wait process running
+	like call-process.
+	Window configuration save & restore.
+
 2000-08-04  Yuuichi Teranishi  <teranisi@quickhack.net>
 
 	* emacs/mhc-bm.el (mhc-bm-icon-alist): Fixed typo (xpm->xbm).
